src/objects/Wish_Child_Form__c.object
<CustomObject>
    <description>It will hold the value of Wish Child, Wish Info and Wish Family values.</description>
    <fields>
        <fullName>Actor_Actress__c</fullName>
        <description>Wish child&apos;s Favorite Actor/Actress</description>
        <label>Actor/Actress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Requests__c</fullName>
        <label>Additional Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Already_wish_granted_by_MAW_Other_Org__c</fullName>
        <description>Prior Wish Granted details</description>
        <label>Already wish granted by MAW/Other Org</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_impact_your_ability_to_join_wish__c</fullName>
        <label>Any impact your ability to join wish</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_all_requested_participants_Details__c</fullName>
        <description>Wish Family form Travel question4</description>
        <label>Are all requested participants Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automobile_insurance_provide_coverage__c</fullName>
        <label>Automobile insurance provide coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Availability_Time_Period_1__c</fullName>
        <label>Availability Time Period 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Time_Period_2__c</fullName>
        <label>Availability Time Period 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Time_Period_3__c</fullName>
        <label>Availability Time Period 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <description>Wish Child DOB</description>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Story__c</fullName>
        <description>Wish child&apos;s Favorite Book/Story</description>
        <label>Book/Story</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bringing_Own_Wheel_Chair__c</fullName>
        <label>Bringing_Own_Wheel_Chair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cake_Candy__c</fullName>
        <description>Wish child&apos;s Favorite Cake/Candy</description>
        <label>Cake/Candy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Team_Member1__c</fullName>
        <description>It holds the updated case team member details.</description>
        <label>Case Team Member1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Team_Member2__c</fullName>
        <description>It will hold the updated Case Team Member details.</description>
        <label>Case Team Member2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It lookup to case record</description>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wish</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipName>Wish_Child_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>It will hold wish child&apos;s city detail.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassinSchool__c</fullName>
        <description>Wish child&apos;s favorite Class in school</description>
        <label>Class in School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>Wish child&apos;s Favorite Color</description>
        <label>Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_Hidden_Envelop_Id__c</fullName>
        <label>Delivered Hidden Envelop Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_LiabilitySignerMapKeyPair__c</fullName>
        <label>Delivered LiabilitySignerMapKeyPair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_about_Impact__c</fullName>
        <label>Details about Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <description>Wish child&apos;s medical condition</description>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_each_requested_participan__c</fullName>
        <description>Wish Family form Travel question8</description>
        <label>Does each requestedParticipant18Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_each_requested_participant_Details__c</fullName>
        <description>Wish Family form Travel question7</description>
        <label>Does each requested participant Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_participant_have_valid_photo_ID__c</fullName>
        <label>Does participant have valid photo ID?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_your_family_Details__c</fullName>
        <description>Wish Family form Travel question9</description>
        <label>Does your family Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_your_family_have_a_credit_card_Note__c</fullName>
        <label>Does your family have a credit card_Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_your_family_have_a_credit_card__c</fullName>
        <label>Does your family have a credit card?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_Details__c</fullName>
        <label>Driver Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Driver_Information__c</fullName>
        <description>This field is used to store the Driver information.</description>
        <label>Driver Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <description>It holds the Driver Name details.</description>
        <label>Driver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Electronics_Games_that_I_like_to_play__c</fullName>
        <description>Other favorites</description>
        <label>Electronics/Games that I like to play</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Wish child&apos;s Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_First_Name__c</fullName>
        <label>Emergency First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Last_Name__c</fullName>
        <label>Emergency Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Middle_Name__c</fullName>
        <label>Emergency Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Mobilephone__c</fullName>
        <label>Emergency mobilephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Relationship__c</fullName>
        <label>Emergency Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Envelop_Id__c</fullName>
        <description>It store the docusign envelop Id.</description>
        <label>Hidden Envelop Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>Wish Child First Name</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <description>Wish child&apos;s Favorite Food</description>
        <label>Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <description>Wish child&apos;s Favorite Game</description>
        <label>Game</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Wish Child gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I choose not to self-identify</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handicap_accommodations_be_required_No__c</fullName>
        <label>Handicap accommodations be required?No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Handicap_accommodations_be_required__c</fullName>
        <label>Handicap accommodations be required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_your_family_flown__c</fullName>
        <description>Wish Family form Travel question1</description>
        <label>Has your family flown</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_family_flown_before_Note__c</fullName>
        <label>Has your family flown before? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_family_flown_before__c</fullName>
        <label>Has your family flown before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_current_automobile_insurance__c</fullName>
        <label>Have current automobile insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Contact_Name__c</fullName>
        <description>This field is used to the contacts who are all signed the docusign document.</description>
        <label>Hidden Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Email_List__c</fullName>
        <description>This field is used to store the list of email values from Wish Information form.</description>
        <label>Hidden Email List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Envelop_Id_1__c</fullName>
        <description>This field is used to store the envelop id while send the call out to docusign.</description>
        <label>Hidden Envelop Id 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Envelop_Id_2__c</fullName>
        <description>This field is used to store the envelop id when call out send to docusign.</description>
        <label>Hidden Envelop Id 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Envelop_Id_3__c</fullName>
        <description>This field is used to store the envelop id while send the call out to docusign.</description>
        <label>Hidden Envelop Id 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Liability_Envelop_Id_1__c</fullName>
        <label>Hidden Liability Envelop Id 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Liability_Envelop_Id_2__c</fullName>
        <label>Hidden Liability Envelop Id 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Liability_Envelop_Id_3__c</fullName>
        <label>Hidden Liability Envelop Id 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Liability_SignerMap_Key_1__c</fullName>
        <label>Hidden Liability SignerMap Key 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Liability_SignerMap_Key_2__c</fullName>
        <label>Hidden Liability SignerMap Key 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Liability_SignerMap_Key_3__c</fullName>
        <label>Hidden Liability SignerMap Key 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Name_List__c</fullName>
        <description>This field is used to store the parent guardian and participant values.</description>
        <label>Hidden Name List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Same_as_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Same as Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_SignerMap_Key_1__c</fullName>
        <description>This field is used to store the signer values who are all going to sign the document.</description>
        <label>Hidden SignerMap Key 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_SignerMap_Key_2__c</fullName>
        <description>This field is used to store the signer values who are all going to sign the document.</description>
        <label>Hidden SignerMap Key 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_SignerMap_Key_3__c</fullName>
        <description>This field is used to store the signer values who are all going to sign the document.</description>
        <label>Hidden SignerMap Key 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Fmaily_Contact_Email__c</fullName>
        <description>This field is used to store the wish family contact name and email address from the wish family form.</description>
        <label>Hidden Wish Fmaily Contact Email</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Fmaily_Contact_Name__c</fullName>
        <description>This field is used to store the wish family contact name from wish child from.</description>
        <label>Hidden Wish Family Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <description>Wish child&apos;s favorite Hobby</description>
        <label>Hobby</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Enter_Org_Name_Wish_Date_it_wa__c</fullName>
        <description>If already wish granted, please indicate the organization&apos;s name, the wish, 
and the date it was or will be granted.</description>
        <inlineHelpText>If already wish granted, please indicate the organization&apos;s name, the wish, 
and the date it was or will be granted.</inlineHelpText>
        <label>If yes,Enter Org.Name,Wish&amp; Date it wa</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture the Information provided from wish family form.</description>
        <label>Information Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsParticipant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParticipant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWishFamily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicate whether wish family form is completed or not</description>
        <label>IsWishFamily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_wheelchair_accessible_vehicle_neede__c</fullName>
        <label>Is a wheelchair accessible vehicle neede</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_collapsible_Note__c</fullName>
        <label>Is_the_wheelchair_collapsible_Note__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_collapsible__c</fullName>
        <label>Is the wheelchair collapsible?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_power_Note__c</fullName>
        <label>Is the wheelchair power? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_power__c</fullName>
        <label>Is the wheelchair power?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_your_family_comfortable_in_rendal_car__c</fullName>
        <label>Is your family comfortable in rendal car</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Wish Child Last Name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiabilitySignerMapKeyPair__c</fullName>
        <description>This field is used to store the Name and their pair when docusign call out is sent.</description>
        <label>Hidden LiabilitySignerMapKeyPair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MY_WISH_IS_TO__c</fullName>
        <label>MY WISH IS TO</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medication_require_refrigeration_Note__c</fullName>
        <description>Notes on Medication required refrigeration</description>
        <label>Medication require refrigeration? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medication_require_refrigeration__c</fullName>
        <label>Medication_require_refrigeration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication_require_refrigeration_name__c</fullName>
        <label>Medication_require_refrigeration_name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Wish Child Middle Name</description>
        <label>Middle Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movie__c</fullName>
        <description>Wish Child&apos;s Favorite Movie</description>
        <label>Movie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music_Singer__c</fullName>
        <description>Wish child&apos;s Favorite Music/ Singer</description>
        <label>Music/Singer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_wheelchair_collapsible__c</fullName>
        <label>Name_of_wheelchair_collapsible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Names_for_receiving_nursing_care__c</fullName>
        <label>Names_for_receiving_nursing_care</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Wish child&apos;s other favorites</description>
        <label>Other Favorites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Legal_Guardian_Signature__c</fullName>
        <description>It will capture the Parent/Legal Guardian Signature</description>
        <label>Parent/Legal Guardian Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pariticipant_name_havingWheelchair_Power__c</fullName>
        <label>Pariticipant_name_havingWheelchair_Power</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Contacts__c</fullName>
        <label>Participant Contacts</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Participant_Details__c</fullName>
        <description>This field is used to store the participant name and email values from the wish child form.</description>
        <label>Participant Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <description>This field is used to store the participant name with out their email address.</description>
        <label>Participant Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Name_for_Dietary_Restriction__c</fullName>
        <label>Participant_Name_for_Dietary_Restriction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_Names__c</fullName>
        <description>This filed is used to capture the participant names</description>
        <label>Participant Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_dietary_restrictions_Note__c</fullName>
        <label>Participant dietary restrictions? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_dietary_restrictions__c</fullName>
        <label>Participant dietary restrictions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_have_allergies_to_food_Note__c</fullName>
        <description>Notes on participant&apos;s food allergy</description>
        <label>Participant have allergies to food Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_have_allergies_to_food__c</fullName>
        <description>Pick list that have details either the participant have any food allergy or not</description>
        <label>Participant have allergies to food</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_have_valid_passports_Note__c</fullName>
        <label>Participant_have_valid_passports_Note__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_have_valid_passports__c</fullName>
        <label>Participant have valid passports?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_have_valid_photo_ID_Note__c</fullName>
        <label>Participant have valid photo ID_Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_a_wheelchair_Details__c</fullName>
        <label>Participant require a wheelchair Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_a_wheelchair_Note__c</fullName>
        <label>Participant_require_a_wheelchair_Note__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_a_wheelchair__c</fullName>
        <label>Participant require a wheelchair?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_require_medical_suppliesNote__c</fullName>
        <description>Notes on medical supplies</description>
        <label>Participant require medical suppliesNote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_medical_supplies__c</fullName>
        <description>Does the participant required medical supplies</description>
        <label>Participant require medical supplies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_require_oxygen_Note__c</fullName>
        <description>Notes on Participant require oxygen</description>
        <label>Participant require oxygen? Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_oxygen_how_often__c</fullName>
        <description>It will capture whether participant require oxygen or not</description>
        <label>Participant require oxygen?&amp;how often?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pet_Animal__c</fullName>
        <description>Wish child&apos;s favorite Pet/Animal</description>
        <label>Pet/Animal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Driver_Expiration_Date__c</fullName>
        <label>Potential Driver Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Driver_Name__c</fullName>
        <label>Potential Driver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Driver_State__c</fullName>
        <label>Potential_Driver_State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Valid_D_L__c</fullName>
        <label>Potential Valid D.L. #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_Expiration_Date__c</fullName>
        <label>Preferred Driver Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_Name_c__c</fullName>
        <label>Preferred Driver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_State__c</fullName>
        <label>Preferred Driver State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_Valid_D_L__c</fullName>
        <label>Preferred Driver Valid D.L. #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Wish Child Preferred Name</description>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryAddreess__c</fullName>
        <description>This field is used to store the Address information of child.</description>
        <formula>Street__c+&apos;,&apos;+&apos; &apos;+ City__c+&apos;,&apos;+&apos; &apos;+ State__c+&apos;,&apos;+&apos; &apos;+ Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <description>Wish child&apos;s Primary Address</description>
        <label>Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_Details__c</fullName>
        <label>Race/Ethnicity Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>